# velomorph

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  release.sh
.cargo/: config.toml
.github/workflows/: ci.yml
examples/full_showcase/: Cargo.toml
examples/full_showcase/src/: main.rs
velomorph-derive/: Cargo.toml  README.md
velomorph-derive/src/: lib.rs
velomorph-derive/tests/: ui.rs
velomorph-derive/tests/ui/: malformed_default_on_option.rs  malformed_default_on_option.stderr  malformed_field.rs  malformed_field.stderr  malformed_skip_with.rs  malformed_skip_with.stderr  malformed_struct.rs  malformed_struct.stderr  malformed_variant_attr.rs  malformed_variant_attr.stderr
velomorph-lib/: Cargo.toml
velomorph-lib/benches/: morph_bench.rs
velomorph-lib/src/: lib.rs
velomorph-lib/tests/: morph_integration.rs
