[package]
name = "velomorph"
description = "High-performance zero-copy struct transformation for Rust with asynchronous background deallocation."
categories = [
    "memory-management",
    "asynchronous",
    "development-tools",
    "network-programming",
    "data-structures",
]
keywords = ["zero-copy", "transformation", "tokio", "derive", "latency"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
velomorph-derive = { path = "../velomorph-derive", version = "0.2.1" }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
criterion = { workspace = true }

[features]
default = []
janitor = ["dep:tokio"]

[[bench]]
name = "morph_bench"
harness = false
