[package]
name = "full_showcase"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A demonstration of the Velomorph high-performance transformation engine."

[dependencies]
velomorph = { path = "../../velomorph-lib" }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }